opam-version: "2.0"
synopsis: "Drupal 7 compatible password hashing"
description: "Generate and verify Drupal 7 compatible password hashes"
depends: [
  "dune" {>= "2.4"}
  "mirage-crypto"
]
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
